changment des noms

--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
         <a class="nav-link" onclick="show_tomes_ByName('Bleach')">Bleach</a>
         <a class="nav-link"onclick="show_tomes_ByName('Bluelock')">Bluelock</a>
         <a class="nav-link"onclick="show_tomes_ByName('Chainsawman')">Chainsawman</a>
-        <a class="nav-link"onclick="show_tomes_ByName('Death note')">Death note</a>
-        <a class="nav-link"onclick="show_tomes_ByName('Demon slayer')">Demon slayer</a>
-        <a class="nav-link"onclick="show_tomes_ByName('Fire force')">Fire force</a>
-        <a class="nav-link"onclick="show_tomes_ByName('Jujutsu kaisen')">Jujutsu kaisen</a>
+        <a class="nav-link"onclick="show_tomes_ByName('Death_note')">Death note</a>
+        <a class="nav-link"onclick="show_tomes_ByName('Demon_slayer')">Demon slayer</a>
+        <a class="nav-link"onclick="show_tomes_ByName('Fire_force')">Fire force</a>
+        <a class="nav-link"onclick="show_tomes_ByName('Jujutsu_kaisen')">Jujutsu kaisen</a>
         <a class="nav-link"onclick="show_tomes_ByName('Naruto')">Naruto</a>
-        <a class="nav-link"onclick="show_tomes_ByName('One piece')">One piece</a>
-        <a class="nav-link"onclick="show_tomes_ByName('One punch man')">One punch man</a>
+        <a class="nav-link"onclick="show_tomes_ByName('One_piece')">One piece</a>
+        <a class="nav-link"onclick="show_tomes_ByName('One_punch_man')">One punch man</a>
       </nav>
 <section class="block_img">
 </section>
